first commit - long overdue

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "template",
+  "name": "excoelis",
   "version": "1.0.0",
-  "description": "starter template for Ethereum React Dapp using SKALE and Portis",
+  "description": "Application that tracks issuance of Canadian parachute wings.",
   "private": true,
   "author": "a.luhning@vitalpoint.ai",
   "dependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/core": "^7.7.2",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
     "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.7.0",
     "@babel/register": "^7.6.0",
     "@openzeppelin/contracts": "^2.3.0",
     "@portis/web3": "^2.0.0-beta.43",
@@ -21,7 +21,10 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "dotenv": "6.2.0",
+    "drizzle": "^1.4.0",
     "ethereum-ens": "^0.7.8",
+    "ganache-http-proxy": "^1.0.7",
+    "json-loader": "^0.5.7",
     "lodash": "4.17.13",
     "moment": "2.24.0",
     "react": "^16.9.0",
